[metadata]
name = concept_formation
author = Christopher J. MacLellan, Erik Harpstead
author-email = maclellan.christopher@gmail.com, whitill29@gmail.com
summary = A library for doing incremental concept formation using algorithms in the COBWEB family.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://pypi.python.org/pypi/concept_formation
project_urls = 
    Documentation = https://concept-formation.readthedocs.io/
    Source Code = https://github.com/cmaclell/concept_formation 
license = MIT
license_file = LICENSE.txt
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
keywords = "clustering machine-learning"

[files]
packages =
    concept_formation

[bdist_wheel]
universal=1

[aliases]
test=pytest
